[HUBZERO][#8005][MEDIA] Adding style to fix issue with tooltip causing Chrome and Firefox windows to 'jump'

--- a/media/system/less/tooltip.less
+++ b/media/system/less/tooltip.less
@@ -10,7 +10,6 @@
 // --------------------------------------------------
 
 .tooltip {
-	//float: left;
 	min-width: 50px;
 	max-width: 200px;
 	z-index: @zindexTooltip;
@@ -22,7 +21,7 @@
 	//#gradient > .vertical(@tooltipBackgroundStart, @tooltipBackgroundEnd);
 	background: #252525 !important;
 	.box-sizing(border-box);
-
+	position: absolute;
 	float: left;
 
 	// Arrow
